kubernetes/model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
  labels:
    app: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla2025-team19/model-service:0.0.5
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: model-cache-volume
              mountPath: /models_cache
          # Placeholder, added because "One or more containers do not have resources - this can cause noisy neighbor issues" lint error
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: model-cache-volume
          hostPath:
            path: /mnt/shared/model_cache
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: model
  labels:
    app: model
spec:
  selector:
    app: model
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
